force-app/main/default/objects/Canvas_Course__c/Canvas_Course__c.object-meta.xml
<CustomObject>
    <description>Courses in Canvas.</description>
    <label>Canvas Course</label>
    <nameField>
        <label>Canvas Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Canvas Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>