force-app/main/default/objects/Canvas_Course__c/fields/Canvas_ID__c.field-meta.xml
<CustomField>
    <fullName>Canvas_ID__c</fullName>
    <description>Internal ID in Canvas.</description>
    <externalId>true</externalId>
    <label>Canvas ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>