force-app/main/default/objects/Canvas_Course__c/fields/Course_Name_in_Survey_Monkey__c.field-meta.xml
<CustomField>
    <fullName>Course_Name_in_Survey_Monkey__c</fullName>
    <label>Course Name in Survey Monkey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>