force-app/main/default/objects/Canvas_Course__c/fields/Credly_Badge_Name__c.field-meta.xml
<CustomField>
    <fullName>Credly_Badge_Name__c</fullName>
    <label>Credly Badge Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>