force-app/main/default/objects/Canvas_Course__c/fields/Lead_Field__c.field-meta.xml
<CustomField>
    <fullName>Lead_Field__c</fullName>
    <label>Lead Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>