force-app/main/default/objects/Canvas_Course__c/fields/Workforce_Program__c.field-meta.xml
<CustomField>
    <fullName>Workforce_Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Workforce Program</label>
    <referenceTo>Workforce_Program__c</referenceTo>
    <relationshipLabel>Canvas Courses</relationshipLabel>
    <relationshipName>Canvas_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>