force-app/main/default/objects/Canvas_Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Workforce_Program__c</columns>
    <columns>NAME</columns>
    <columns>Canvas_ID__c</columns>
    <columns>Lead_Field__c</columns>
    <columns>Credly_Badge_Name__c</columns>
    <columns>Course_Name_in_Survey_Monkey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>