force-app/main/default/objects/Canvas_Course__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Canvas_ID__c</columns>
    <columns>Lead_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>